--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "description": "",
   "author": "Will Westrop",
   "license": "MIT",
+  "scripts": {
+    "build": "node ./build.js"
+  },
   "dependencies": {
     "fs-extra": "^10.1.0",
     "handlebars": "^4.7.7",
+    "jszip": "^3.10.1",
     "web-ext": "^7.0.0"
   }
 }
