--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,5 +50,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: dist/azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
-          asset_name: azure_devops_icons.zip
+          asset_name: azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
           asset_content_type: application/zip
