--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,12 +43,22 @@ jobs:
             - [Firefox](https://addons.mozilla.org/en-GB/firefox/search/?q=Azure%20DevOps%20icon)
             - [Chrome](https://chrome.google.com/webstore/category/extensions)
       
-      - name: Upload Release Asset
+      - name: Upload Release Asset (Firefox)
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
-          asset_name: azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
+          asset_path: dist/firefox/azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
+          asset_name: firefox_azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
+          asset_content_type: application/zip
+
+      - name: Upload Release Asset (Chrome)
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/chrome/azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
+          asset_name: chrome_azure_devops_icons_${{ steps.build.outputs.PKG_VERSION }}.zip
           asset_content_type: application/zip
