--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,9 @@ jobs:
           release_name: ${{ steps.build.outputs.PKG_VERSION }}
           body: |
             **Note:** This release is not signed and will not be loaded by the browser directly.
-            You are best advised to download it from the appropriate browser's extension gallery.
-            - [Firefox](https://addons.mozilla.org/en-GB/firefox/search/?q=Azure%20DevOps%20icon)
-            - [Chrome](https://chrome.google.com/webstore/category/extensions)
+            You are best advised to download it from the appropriate browser's extension gallery:
+            - [Firefox addons](https://addons.mozilla.org/en-GB/firefox/search/?q=Azure%20DevOps%20icon&type=extension)
+            - [Chrome/Edge addons](https://chrome.google.com/webstore/detail/azure-devops-icons/pgbejjjgidgpciebpdiajlljpipdpcfe)
       
       - name: Upload Release Asset (Firefox)
         uses: actions/upload-release-asset@v1
